CONFIGS="BOARD LOCAL_FIRMWARE FIRMWARE_PATH"

CONFIG_BOARD() {
	local BOARDS=$(ls boards/ | sed -rn 's/\.(h|mk)$//p' | sort -r | uniq -d)
	
	default() { echo 'leanXcam'; }
	enabled() { true; }
	prompt() { echo "Select the board you are using ($(echo -n "$BOARDS" | tr '\n' '/'))."; }
	check() { grep -xqF "$BOARDS"; }
	
	[ "$1" ] && "$1"
}

CONFIG_LOCAL_FIRMWARE() {
	default() { echo 'n'; }
	enabled() { [ "$CONFIG_BOARD" == 'indXcam' ]; }
	prompt() { echo "Is the lgx module allready at the path ./lgx (y/n)?"; }
	check() { grep -xqE 'y|n'; }
	
	[ "$1" ] && "$1"
}

CONFIG_FIRMWARE_PATH() {
	default() { echo '../lgx'; }
	enabled() { [ "$CONFIG_LOCAL_FIRMWARE" == 'n' ]; }
	prompt() { echo "Enter the path to the lgx module.?"; }
	check() { grep -xqE '.+'; }
	
	[ "$1" ] && "$1"
}